# learning-llvm

./: .gitignore  CMakeLists.txt  README.md
IRBuilder/: README.md  TokenKinds.cc  TokenKinds.def  TokenKinds.h
Transform/Scalar/: Local.cpp  Makefile  README
Transform/Scalar/Tests/: algebraic.c
cl/: CMakeLists.txt  quick_start.cc
clang/: CMakeLists.txt  diagnose.cc  parser.cc  tokenizer.cc
